# app-demo

./: .gitignore  README.md  calendar.md  workshop-setup-guide.md
go/: .env.example  README.md  go.mod  go.sum  lightning.go  main.go  payouts.go  trading.go
go/static/: index.html  trading.html
labs/: .env.example  .gitignore
labs/src/: env.js
labs/src/app/: layout.tsx
labs/src/app/api/payouts/: route.ts
labs/src/app/api/test-webhook/: route.ts
labs/src/app/api/v1/payouts/: route.ts
labs/src/app/api/v1/trade/: route.ts
labs/src/app/api/v1/trade/finalize/: route.ts
labs/src/app/api/webhook/: route.ts
labs/src/app/payouts/: page.tsx
labs/src/app/trading/: page.tsx
labs/src/app/virtual-cards/: page.tsx
labs/src/components/ui/: card.tsx  input.tsx  virtual-card.tsx
labs/src/lib/: virtual-cards.ts
labs/src/server/db/: schema.ts
labs/src/styles/: globals.css
php/: README.md  composer.json  index.php  payouts.php
php/static/: index.html
python/: README.md  app.py
python/static/: index.html
rust/: .gitignore  Cargo.toml  README.md
rust/src/: config.rs  lib.rs  main.rs
rust/src/handlers/: mod.rs  payouts.rs  trading.rs
rust/static/: index.html
typescript/labs/: package-lock.json  package.json
typescript/labs/src/app/: page.tsx
typescript/labs/src/app/api/v1/trade/: route.ts
typescript/labs/src/app/api/v1/transactions/: route.ts
typescript/labs/src/app/payouts/: page.tsx
typescript/labs/src/app/trading/: page.tsx
typescript/labs/src/lib/: axios.ts  virtual-cards.ts
(+3 files in other folders)
